clients/flutter/lib/src/native/generated/anytty_terminal_input_bindings.dart

// Generated by ffigen. Do not edit.

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Generated bindings for the AnyTTY libghostty-vt input adapter.
class AnyttyTerminalInputNative {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AnyttyTerminalInputNative(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AnyttyTerminalInputNative.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int anytty_terminal_input_abi_version() {
    return _anytty_terminal_input_abi_version();
  }

  late final _anytty_terminal_input_abi_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>(
        'anytty_terminal_input_abi_version',
      );
  late final _anytty_terminal_input_abi_version =
      _anytty_terminal_input_abi_versionPtr.asFunction<int Function()>();

  int anytty_terminal_input_new(
    ffi.Pointer<ffi.Pointer<anytty_terminal_input_v1>> out_input,
  ) {
    return _anytty_terminal_input_new(out_input);
  }

  late final _anytty_terminal_input_newPtr =
      _lookup<
        ffi.NativeFunction<
          anytty_terminal_status_v1 Function(
            ffi.Pointer<ffi.Pointer<anytty_terminal_input_v1>>,
          )
        >
      >('anytty_terminal_input_new');
  late final _anytty_terminal_input_new = _anytty_terminal_input_newPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Pointer<anytty_terminal_input_v1>>)
      >();

  void anytty_terminal_input_free(ffi.Pointer<anytty_terminal_input_v1> input) {
    return _anytty_terminal_input_free(input);
  }

  late final _anytty_terminal_input_freePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<anytty_terminal_input_v1>)
        >
      >('anytty_terminal_input_free');
  late final _anytty_terminal_input_free = _anytty_terminal_input_freePtr
      .asFunction<void Function(ffi.Pointer<anytty_terminal_input_v1>)>();

  int anytty_terminal_input_set_modes(
    ffi.Pointer<anytty_terminal_input_v1> input,
    ffi.Pointer<anytty_terminal_modes_v1> modes,
  ) {
    return _anytty_terminal_input_set_modes(input, modes);
  }

  late final _anytty_terminal_input_set_modesPtr =
      _lookup<
        ffi.NativeFunction<
          anytty_terminal_status_v1 Function(
            ffi.Pointer<anytty_terminal_input_v1>,
            ffi.Pointer<anytty_terminal_modes_v1>,
          )
        >
      >('anytty_terminal_input_set_modes');
  late final _anytty_terminal_input_set_modes =
      _anytty_terminal_input_set_modesPtr
          .asFunction<
            int Function(
              ffi.Pointer<anytty_terminal_input_v1>,
              ffi.Pointer<anytty_terminal_modes_v1>,
            )
          >();

  int anytty_terminal_input_set_geometry(
    ffi.Pointer<anytty_terminal_input_v1> input,
    ffi.Pointer<anytty_terminal_geometry_v1> geometry,
  ) {
    return _anytty_terminal_input_set_geometry(input, geometry);
  }

  late final _anytty_terminal_input_set_geometryPtr =
      _lookup<
        ffi.NativeFunction<
          anytty_terminal_status_v1 Function(
            ffi.Pointer<anytty_terminal_input_v1>,
            ffi.Pointer<anytty_terminal_geometry_v1>,
          )
        >
      >('anytty_terminal_input_set_geometry');
  late final _anytty_terminal_input_set_geometry =
      _anytty_terminal_input_set_geometryPtr
          .asFunction<
            int Function(
              ffi.Pointer<anytty_terminal_input_v1>,
              ffi.Pointer<anytty_terminal_geometry_v1>,
            )
          >();

  int anytty_terminal_input_encode_key(
    ffi.Pointer<anytty_terminal_input_v1> input,
    int hid_usage,
    int action,
    int modifiers,
    int unshifted_codepoint,
    bool composing,
    ffi.Pointer<ffi.Uint8> utf8,
    int utf8_length,
    ffi.Pointer<anytty_terminal_buffer_v1> out_buffer,
  ) {
    return _anytty_terminal_input_encode_key(
      input,
      hid_usage,
      action,
      modifiers,
      unshifted_codepoint,
      composing,
      utf8,
      utf8_length,
      out_buffer,
    );
  }

  late final _anytty_terminal_input_encode_keyPtr =
      _lookup<
        ffi.NativeFunction<
          anytty_terminal_status_v1 Function(
            ffi.Pointer<anytty_terminal_input_v1>,
            ffi.Uint64,
            anytty_terminal_key_action_v1,
            anytty_terminal_modifiers_v1,
            ffi.Uint32,
            ffi.Bool,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<anytty_terminal_buffer_v1>,
          )
        >
      >('anytty_terminal_input_encode_key');
  late final _anytty_terminal_input_encode_key =
      _anytty_terminal_input_encode_keyPtr
          .asFunction<
            int Function(
              ffi.Pointer<anytty_terminal_input_v1>,
              int,
              int,
              int,
              int,
              bool,
              ffi.Pointer<ffi.Uint8>,
              int,
              ffi.Pointer<anytty_terminal_buffer_v1>,
            )
          >();

  int anytty_terminal_input_encode_mouse(
    ffi.Pointer<anytty_terminal_input_v1> input,
    int action,
    int button,
    int modifiers,
    double x,
    double y,
    ffi.Pointer<anytty_terminal_buffer_v1> out_buffer,
  ) {
    return _anytty_terminal_input_encode_mouse(
      input,
      action,
      button,
      modifiers,
      x,
      y,
      out_buffer,
    );
  }

  late final _anytty_terminal_input_encode_mousePtr =
      _lookup<
        ffi.NativeFunction<
          anytty_terminal_status_v1 Function(
            ffi.Pointer<anytty_terminal_input_v1>,
            anytty_terminal_mouse_action_v1,
            anytty_terminal_mouse_button_v1,
            anytty_terminal_modifiers_v1,
            ffi.Float,
            ffi.Float,
            ffi.Pointer<anytty_terminal_buffer_v1>,
          )
        >
      >('anytty_terminal_input_encode_mouse');
  late final _anytty_terminal_input_encode_mouse =
      _anytty_terminal_input_encode_mousePtr
          .asFunction<
            int Function(
              ffi.Pointer<anytty_terminal_input_v1>,
              int,
              int,
              int,
              double,
              double,
              ffi.Pointer<anytty_terminal_buffer_v1>,
            )
          >();

  int anytty_terminal_input_encode_paste(
    ffi.Pointer<anytty_terminal_input_v1> input,
    ffi.Pointer<ffi.Uint8> utf8,
    int utf8_length,
    bool allow_unsafe,
    ffi.Pointer<anytty_terminal_buffer_v1> out_buffer,
  ) {
    return _anytty_terminal_input_encode_paste(
      input,
      utf8,
      utf8_length,
      allow_unsafe,
      out_buffer,
    );
  }

  late final _anytty_terminal_input_encode_pastePtr =
      _lookup<
        ffi.NativeFunction<
          anytty_terminal_status_v1 Function(
            ffi.Pointer<anytty_terminal_input_v1>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Bool,
            ffi.Pointer<anytty_terminal_buffer_v1>,
          )
        >
      >('anytty_terminal_input_encode_paste');
  late final _anytty_terminal_input_encode_paste =
      _anytty_terminal_input_encode_pastePtr
          .asFunction<
            int Function(
              ffi.Pointer<anytty_terminal_input_v1>,
              ffi.Pointer<ffi.Uint8>,
              int,
              bool,
              ffi.Pointer<anytty_terminal_buffer_v1>,
            )
          >();

  void anytty_terminal_buffer_free(anytty_terminal_buffer_v1 buffer) {
    return _anytty_terminal_buffer_free(buffer);
  }

  late final _anytty_terminal_buffer_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(anytty_terminal_buffer_v1)>>(
        'anytty_terminal_buffer_free',
      );
  late final _anytty_terminal_buffer_free = _anytty_terminal_buffer_freePtr
      .asFunction<void Function(anytty_terminal_buffer_v1)>();
}

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

typedef anytty_terminal_status_v1 = ffi.Int32;
typedef Dartanytty_terminal_status_v1 = int;
typedef anytty_terminal_key_action_v1 = ffi.Uint32;
typedef Dartanytty_terminal_key_action_v1 = int;
typedef anytty_terminal_modifiers_v1 = ffi.Uint16;
typedef Dartanytty_terminal_modifiers_v1 = int;
typedef anytty_terminal_mouse_action_v1 = ffi.Uint32;
typedef Dartanytty_terminal_mouse_action_v1 = int;
typedef anytty_terminal_mouse_button_v1 = ffi.Uint32;
typedef Dartanytty_terminal_mouse_button_v1 = int;

final class anytty_terminal_input_v1 extends ffi.Opaque {}

final class anytty_terminal_buffer_v1 extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Size()
  external int length;
}

final class anytty_terminal_modes_v1 extends ffi.Struct {
  @ffi.Size()
  external int size;

  @ffi.Bool()
  external bool application_cursor;

  @ffi.Bool()
  external bool application_keypad;

  @ffi.Bool()
  external bool alt_esc_prefix;

  @ffi.Bool()
  external bool modify_other_keys_state_2;

  @ffi.Uint16()
  external int kitty_keyboard_flags;

  @ffi.Bool()
  external bool backarrow_key;

  @ffi.Bool()
  external bool mouse_x10;

  @ffi.Bool()
  external bool mouse_normal;

  @ffi.Bool()
  external bool mouse_button_event;

  @ffi.Bool()
  external bool mouse_any_event;

  @ffi.Bool()
  external bool mouse_sgr;

  @ffi.Bool()
  external bool bracketed_paste;
}

final class anytty_terminal_geometry_v1 extends ffi.Struct {
  @ffi.Size()
  external int size;

  @ffi.Uint32()
  external int screen_width;

  @ffi.Uint32()
  external int screen_height;

  @ffi.Uint32()
  external int cell_width;

  @ffi.Uint32()
  external int cell_height;

  @ffi.Uint32()
  external int padding_top;

  @ffi.Uint32()
  external int padding_bottom;

  @ffi.Uint32()
  external int padding_right;

  @ffi.Uint32()
  external int padding_left;
}

const int __bool_true_false_are_defined = 1;

const int true$ = 1;

const int false$ = 0;

const int __has_safe_buffers = 1;

const int __DARWIN_ONLY_64_BIT_INO_T = 1;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 1;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_VERS_1050 = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __has_ptrcheck = 0;

const int __has_bounds_safety_attributes = 0;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int __DARWIN_WCHAR_MAX = 2147483647;

const int __DARWIN_WCHAR_MIN = -2147483648;

const int __DARWIN_WEOF = -1;

const int _FORTIFY_SOURCE = 2;

const int NULL = 0;

const int USER_ADDR_NULL = 0;

const int __WORDSIZE = 64;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -32768;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 32767;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 65535;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MAX = 9223372036854775807;

const int INTPTR_MIN = -9223372036854775808;

const int UINTPTR_MAX = -1;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int RSIZE_MAX = 9223372036854775807;

const int WCHAR_MAX = 2147483647;

const int WCHAR_MIN = -2147483648;

const int WINT_MIN = -2147483648;

const int WINT_MAX = 2147483647;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int ANYTTY_TERMINAL_INPUT_ABI_VERSION = 1;

const int ANYTTY_TERMINAL_STATUS_OK = 0;

const int ANYTTY_TERMINAL_STATUS_INVALID_ARGUMENT = 1;

const int ANYTTY_TERMINAL_STATUS_OUT_OF_MEMORY = 2;

const int ANYTTY_TERMINAL_STATUS_OUT_OF_SPACE = 3;

const int ANYTTY_TERMINAL_STATUS_REJECTED = 4;

const int ANYTTY_TERMINAL_STATUS_INTERNAL = 5;

const int ANYTTY_TERMINAL_KEY_RELEASE = 0;

const int ANYTTY_TERMINAL_KEY_PRESS = 1;

const int ANYTTY_TERMINAL_KEY_REPEAT = 2;

const int ANYTTY_TERMINAL_MOD_SHIFT = 1;

const int ANYTTY_TERMINAL_MOD_CTRL = 2;

const int ANYTTY_TERMINAL_MOD_ALT = 4;

const int ANYTTY_TERMINAL_MOD_SUPER = 8;

const int ANYTTY_TERMINAL_MOD_CAPS_LOCK = 16;

const int ANYTTY_TERMINAL_MOD_NUM_LOCK = 32;

const int ANYTTY_TERMINAL_MOD_SHIFT_RIGHT = 64;

const int ANYTTY_TERMINAL_MOD_CTRL_RIGHT = 128;

const int ANYTTY_TERMINAL_MOD_ALT_RIGHT = 256;

const int ANYTTY_TERMINAL_MOD_SUPER_RIGHT = 512;

const int ANYTTY_TERMINAL_MOUSE_PRESS = 0;

const int ANYTTY_TERMINAL_MOUSE_RELEASE = 1;

const int ANYTTY_TERMINAL_MOUSE_MOTION = 2;

const int ANYTTY_TERMINAL_MOUSE_BUTTON_NONE = 0;

const int ANYTTY_TERMINAL_MOUSE_BUTTON_LEFT = 1;

const int ANYTTY_TERMINAL_MOUSE_BUTTON_RIGHT = 2;

const int ANYTTY_TERMINAL_MOUSE_BUTTON_MIDDLE = 3;

const int ANYTTY_TERMINAL_MOUSE_BUTTON_SCROLL_UP = 4;

const int ANYTTY_TERMINAL_MOUSE_BUTTON_SCROLL_DOWN = 5;
